@@ -83,3 +83,16 @@ test_that("aaply equivalent to apply with correct permutation", {
   expect_that(rowMeans(a), equals(aaply(a, 1, mean), check.attr = FALSE))
   expect_that(colMeans(a), equals(aaply(a, 2, mean), check.attr = FALSE))  
 })
+
+test_that("array reconstruction correct with missing cells", {
+  df <- data.frame(i = rep(1:3, each = 12), j = rep(1:3, each = 4), v = 1:36) 
+  df <- subset(df, i != j)
+
+  da <- daply(df, .(i, j), function(q) sum(q$v))
+  dd <- ddply(df, .(i, j), summarise, v1 = sum(v))
+
+  m <- matrix(NA, 3, 3)
+  m[cbind(dd$i, dd$j)] <- dd$v1
+  
+  expect_that(da, equals(m, check.attributes = FALSE))
+})
